# QuantumLearn

./: .gitignore  Deutsch-Jozsa Braket.ipynb  Deutsch-Jozsa.ipynb  PROJECT_CONTEXT.md  README.md  graph_triangles.ipynb  helloworld.ipynb  qvc-qnn.ipynb  requirements.txt  sudoku.ipynb
.github/: copilot-instructions.md
analysis/: kipu_analysis.md
circuits/: sudoku_2x2.qasm  sudoku_4x4.qasm
hubo-workbench/: README.md  pyproject.toml
hubo-workbench/docs/: methodology.md  metrics.md
hubo-workbench/experiments/configs/: demo.yaml  demo_sa_only.yaml
hubo-workbench/experiments/runs/demo_run/: config.yaml  results.jsonl
hubo-workbench/experiments/runs/demo_sa/: config.yaml  results.jsonl
hubo-workbench/experiments/runs/demo_sa/summary/: summary.csv  summary_metadata.json
hubo-workbench/src/hubo/: __init__.py  cli.py  config.py
hubo-workbench/src/hubo/bench/: __init__.py  instances.py  metrics.py  reports.py  runner.py
hubo-workbench/src/hubo/encoding/: __init__.py  constraints.py  hubo_model.py  qubo_reduce.py
hubo-workbench/src/hubo/problems/: __init__.py  assignment.py  base.py
hubo-workbench/src/hubo/solvers/: __init__.py  base.py  classical_ilp.py  classical_sa.py
hubo-workbench/tests/: test_basic.py
projects/qiskit examples/: Deutsch-Jozsa Braket.ipynb  graph_triangles.ipynb  q_ml.ipynb
